--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Thankyouverymuch</title>
+    <title>Thank you very much</title>
   </head>
 
   <body>
@@ -17,14 +17,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/RobThree/ThankYouVeryMuch">View on GitHub</a>
-
-          <h1 id="project_title">Thankyouverymuch</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/RobThree/ThankYouVeryMuch/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/RobThree/ThankYouVeryMuch/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+          <h1 id="project_title">Thank you very much</h1>
+          <h2 id="project_tagline">You guys are awesome</h2>
         </header>
     </div>
 
@@ -39,12 +33,9 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Thankyouverymuch maintained by <a href="https://github.com/RobThree">RobThree</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
