--- a/index.html
+++ b/index.html
@@ -1,41 +1,36 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-
-  <head>
+<head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Thankyouverymuch : " />
-
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Thank you very much</title>
-  </head>
-
-  <body>
-
+    <title>Thank you very much!</title>
+</head>
+<body>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/RobThree/ThankYouVeryMuch">View on GitHub</a>
-          <h1 id="project_title">Thank you very much</h1>
-          <h2 id="project_tagline">You guys are awesome</h2>
+            <h1>We just had to let you know...</h1>
+            <h2>...your hard work and services are appreciated!</h2>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>Thank you. Thankyouverymuch!</p>
-        <p>You guys are awesome!</p>
-      </section>
+        <section id="main_content" class="inner">
+            <p>Thank you. Thankyouverymuch!</p>
+            <p><img src="images/elvis.jpg" width="300" height="225" /></p>
+            <p>You guys are awesome!</p>
+            <p>Enjoy the cake and have a nice day!</p>
+        </section>
     </div>
-
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
+        <footer class="inner">
+            <p><img src="images/kslogo.png" width="250" height="208" /></p>
+            <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        </footer>
     </div>
-
-  </body>
+</body>
 </html>
