--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Thankyouverymuch : " />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <meta name="description" content="Thankyouverymuch" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.min.css">
     <title>Thank you very much!</title>
 </head>
 <body>
@@ -28,8 +28,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
         <footer class="inner">
-            <p><img src="images/kslogo.png" width="250" height="208" /></p>
-            <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+            <p><a href="http://keensystems.eu"><img src="images/kslogo.png" width="250" height="208" /></a></p>
+            <p class="small">Published with <a href="https://github.com/RobThree/ThankYouVeryMuch">GitHub Pages</a></p>
         </footer>
     </div>
 </body>
