--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p>Thank you. Thankyouverymuch!</p>
             <p><img src="images/elvis.jpg" width="300" height="225" /></p>
             <p>You guys are awesome!</p>
+            <p><img src="images/logo_TRUE_on_dark_background_113x24.png" width="113" height="24"></p>
             <p>Enjoy the cake and have a nice day!</p>
         </section>
     </div>
