And girls! Girlsverymuch!

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="main_content" class="inner">
             <p>Thank you. Thankyouverymuch!</p>
             <p><img src="images/elvis.jpg" width="300" height="225" /></p>
-            <p>You guys are awesome!</p>
+            <p>You are awesome!</p>
             <p><img src="images/logo_TRUE_on_dark_background_113x24.png" width="113" height="24"></p>
             <p>Enjoy the cake and have a nice day!</p>
         </section>
