--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="description" content="Thankyouverymuch" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.min.css">
     <title>Thank you very much!</title>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript">
+        if (typeof jQuery == 'undefined')
+            document.write(unescape("%3Cscript src='js/jquery-1.10.2.min.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+
 </head>
 <body>
     <!-- HEADER -->
@@ -21,8 +27,8 @@
         <section id="main_content" class="inner">
             <p>Thank you. Thankyouverymuch!</p>
             <p><img src="images/elvis.jpg" width="300" height="225" /></p>
-            <p>You are awesome!</p>
-            <p><img src="images/logo_TRUE_on_dark_background_113x24.png" width="113" height="24"></p>
+            <p><span id="n">True</span> is awesome!</p>
+            <p><a href="https://true.nl"><img src="images/logo_TRUE_on_dark_background_113x24.png" width="113" height="24"></a></p>
             <p>Enjoy the cake and have a nice day!</p>
         </section>
     </div>
@@ -45,6 +51,11 @@
         ga('create', 'UA-47002036-1', 'robthree.github.io');
         ga('send', 'pageview');
 
+        $(document).ready(function () {
+            var awesomepeople = 'Tess,Wim,Jan-Paul,Rafaël,Bas,Leander,Annechiene,Daniël,Pablo,Ron,Renan,Olaf,Nasir,Mathijs,Menno,Hans,Stefan,Jeroen,Remy,Bob,Raphaël,Sander,René,Dorus,Rudolf,Joost,Ranesh,Fahad,Kevin'.split(',');
+            function awesome(i, s, p) { $('#n').fadeOut(s, function () { $(this).text(awesomepeople[i % awesomepeople.length]).fadeIn(s, function () { setTimeout(function () { awesome(++i, s, p); }, p); }) }); }
+            awesome(0, 500, 1000);
+        });
     </script>
 </body>
 </html>
