--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-            <h1>We just had to let you know...</h1>
+            <h1>We just wanted to let you know...</h1>
             <h2>...your hard work and services are appreciated!</h2>
         </header>
     </div>
