--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Thankyouverymuch" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.min.css">
     <title>Thank you very much!</title>
-    <script type="text/javascript" src="\//ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
     <!-- HEADER -->
