--- a/index.html
+++ b/index.html
@@ -35,16 +35,13 @@
         </footer>
     </div>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E6TCNVS59K"></script>
     <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-47002036-1', 'robthree.github.io');
-        ga('send', 'pageview');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        
+        gtag('config', 'G-3P5F2C6ZRK');
 
         $(document).ready(function () {
             var awesomepeople = 'Tess,Wim,Jan-Paul,Rafaël,Bas,Leander,Annechiene,Daniël,Pablo,Ron,Renan,Olaf,Nasir,Mathijs,Menno,Hans,Stefan,Jeroen,Remy,Bob,Raphaël,Sander,René,Dorus,Rudolf,Joost,Ranesh,Fahad,Kevin'.split(',');
